[package]
name = "gemm-x86"
version = "0.1.0"
edition = "2024"

[dependencies]
crossbeam = "0.8.4"
rayon = "1.10.0"
syncthreads = { path = "../syncthreads" }

[dev-dependencies]
aligned-vec = "0.6.4"
bytemuck = "1.22.0"
diol = { version = "0.12" }
gemm = { path = "../gemm/gemm", features = ["nightly"] }
gemm-common = { version = "0.18.2", features = ["nightly"] }
rand = "0.9.0"
lapack-sys = "0.15.0"
openmp-sys = "1.2.3"
openblas-src = { version = "0.10.11", features = ["system"] }
blas-sys = "0.8.0"
toml = "0.8.20"
json = "0.12.4"
serde_json = "1.0.140"

[build-dependencies]
defer = "0.2.1"
interpol = "0.2.1"
