[package]
name = "private-gemm-x86"
version = "0.1.5"
edition = "2021"
authors = ["sarah quiñones <sarah@veganb.tw>"]
description = "x86 matmul impl"
repository = "https://github.com/sarah-quinones/gemm-x86-v2"
license = "MIT"
rust-version = "1.84.0"

[features]
default = [
  "rayon",
]
rayon = [
  "dep:rayon",
  "dep:spindle",
  "dep:crossbeam",
]

[dependencies]
raw-cpuid = "11.5.0"
crossbeam = { version = "0.8.4", optional = true }
rayon = { version = "1.10.0", optional = true }
spindle = { version = "0.2.1", optional = true }
num_cpus = "1.16.0"

[dev-dependencies]
aligned-vec = "0.6.4"
bytemuck = "1.22.0"
diol = { version = "0.13" }
gemm = { path = "../gemm/gemm", features = ["nightly"] }
gemm-common = { version = "0.18.2", features = ["nightly"] }
rand = "0.9.0"
lapack-sys = "0.15.0"
openmp-sys = "1.2.3"
openblas-src = { version = "0.10.11", features = ["system"] }
blas-sys = "0.8.0"
toml = "0.8.20"
json = "0.12.4"
serde_json = "1.0.140"
faer = { version = "0.21.9", features = ["nightly"] }

[build-dependencies]
defer = "0.2.1"
interpol = "0.2.1"
